fix title top alignment

--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ body {
   text-align: center;
   position: absolute;
   color: white;
-  top: 7%;
+  top: 3%;
 
   @media (max-width: 600px) {
     font-size: 32px;
@@ -216,7 +216,7 @@ body {
     display: -webkit-box;
     overflow: hidden;
     text-overflow: ellipsis;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     word-break: break-all;
     width: 80%;
